--- a/test/dummy/app/views/comboboxes/html_options.html.erb
+++ b/test/dummy/app/views/comboboxes/html_options.html.erb
@@ -46,4 +46,5 @@
     render_in: { partial: "states/state" }
 %>
 
+<div id="clickable" style="width: 10px; height: 10px; background-color: red; margin-bottom: 10px;"></div>
 <%= combobox_tag "state", @states, id: "state-field" %>
