Use snake_case for input type param

--- a/app/views/hotwire_combobox/_pagination.html.erb
+++ b/app/views/hotwire_combobox/_pagination.html.erb
@@ -1,4 +1,4 @@
 <%# locals: (for_id:, src:) -%>
 
 <%= turbo_frame_tag hw_pagination_frame_id(for_id), src: src, loading: :lazy,
-      data: { hw_combobox_target: "endOfOptionsStream", input_type: params[:inputType] } %>
+      data: { hw_combobox_target: "endOfOptionsStream", input_type: params[:input_type] } %>
