--- a/test/dummy/app/views/comboboxes/plain.html.erb
+++ b/test/dummy/app/views/comboboxes/plain.html.erb
@@ -1,3 +1,3 @@
-<%= combobox_tag "state", @states, id: "state-field" %>
+<%= combobox_tag "state", @state_options, id: "state-field" %>
 
 <%= button_tag "focusable element" %>
