--- a/test/dummy/app/views/comboboxes/formbuilder.html.erb
+++ b/test/dummy/app/views/comboboxes/formbuilder.html.erb
@@ -1,4 +1,4 @@
 <%= form_with do |form| %>
-  <%= form.combobox "state", @states, id: "state-field" %>
+  <%= form.combobox "state", @state_options, id: "state-field" %>
   <%= form.submit %>
 <% end %>
