--- a/test/dummy/app/views/comboboxes/open.html.erb
+++ b/test/dummy/app/views/comboboxes/open.html.erb
@@ -1,1 +1,1 @@
-<%= combobox_tag "state", @states, id: "state-field", open: true %>
+<%= combobox_tag "state", @state_options, id: "state-field", open: true %>
