Reroute listbox streams to dialog if necessary
Closes https://github.com/josefarias/hotwire_combobox/issues/76

--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -26,6 +26,12 @@
       .container aside.empty {
         display: none;
       }
+
+      @media (max-width: 600px) {
+        .container aside {
+          display: none;
+        }
+      }
     </style>
   </head>
 
