Add label to fieldset

--- a/app/views/hotwire_combobox/_component.html.erb
+++ b/app/views/hotwire_combobox/_component.html.erb
@@ -1,6 +1,11 @@
 <%= tag.fieldset **component.fieldset_attrs do %>
+  <%= tag.label component.label, **component.label_attrs %>
+
   <%= render "hotwire_combobox/combobox/hidden_field", component: component %>
-  <%= render "hotwire_combobox/combobox/input", component: component %>
-  <%= render "hotwire_combobox/combobox/paginated_listbox", component: component %>
-  <%= render "hotwire_combobox/combobox/dialog", component: component %>
+
+  <%= tag.div **component.main_wrapper_attrs do %>
+    <%= render "hotwire_combobox/combobox/input", component: component %>
+    <%= render "hotwire_combobox/combobox/paginated_listbox", component: component %>
+    <%= render "hotwire_combobox/combobox/dialog", component: component %>
+  <% end %>
 <% end %>
