--- a/test/dummy/app/views/comboboxes/async_html.html.erb
+++ b/test/dummy/app/views/comboboxes/async_html.html.erb
@@ -10,4 +10,4 @@
   }
 </style>
 
-<%= combobox_tag "movie", movies_html_path, id: "movie-field" %>
+<%= combobox_tag "movie", movies_html_path, id: "movie-field", label: "Choose your movie! and also, this text should be impractically long to test overflows" %>
