--- a/test/dummy/app/views/comboboxes/custom_attrs.html.erb
+++ b/test/dummy/app/views/comboboxes/custom_attrs.html.erb
@@ -1,6 +1,8 @@
-<%= combobox_tag "state", State.all do |combobox| %>
+<%= combobox_tag "state", State.all, label: "state" do |combobox| %>
   <% combobox.customize_fieldset class: "custom-class--fieldset", data: { customized_fieldset: "" } %>
+  <% combobox.customize_label class: "custom-class--label", data: { customized_label: "" } %>
   <% combobox.customize_hidden_field class: "custom-class--hidden_field", data: { customized_hidden_field: "" } %>
+  <% combobox.customize_main_wrapper class: "custom-class--main_wrapper", data: { customized_main_wrapper: "" } %>
   <% combobox.customize_input class: "custom-class--input", data: { customized_input: "" } %>
   <% combobox.customize_handle class: "custom-class--handle", data: { customized_handle: "" } %>
   <% combobox.customize_listbox class: "custom-class--listbox", data: { customized_listbox: "" } %>
