Add label to fieldset (#85)

--- a/app/assets/stylesheets/hotwire_combobox.css
+++ b/app/assets/stylesheets/hotwire_combobox.css
@@ -41,8 +41,10 @@
 
 .hw-combobox {
   border-width: 0;
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: column;
   font-size: var(--hw-font-size);
+  gap: var(--hw-padding--slim);
   margin: 0;
   padding: 0;
   position: relative;
@@ -50,6 +52,11 @@
   &, * {
     box-sizing: border-box;
   }
+}
+
+.hw-combobox__main__wrapper {
+  position: relative;
+  width: min-content;
 }
 
 .hw-combobox__input {
