Add multiple selections mode
- render selection "pills" in the "field" for clarity and compactness
    - make `Option#content` public for initial render
- stay open on selection
    - hide selected options from listbox (and keyboard nav)
- tweak keyboard nav. to work correctly in single and multiple modes
    - use `aria-current` instead of `aria-selected` for multiple mode

--- a/app/views/hotwire_combobox/combobox/_input.html.erb
+++ b/app/views/hotwire_combobox/combobox/_input.html.erb
@@ -1,2 +1,4 @@
-<%= tag.input **component.input_attrs %>
-<%= tag.span **component.handle_attrs %>
+<%= tag.div **component.inner_wrapper_attrs do %>
+  <%= tag.input **component.input_attrs %>
+  <%= tag.span **component.handle_attrs %>
+<% end %>
