--- a/app/assets/stylesheets/hotwire_combobox.css
+++ b/app/assets/stylesheets/hotwire_combobox.css
@@ -24,17 +24,17 @@
   --hw-handle-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3E%3Cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3E%3C/svg%3E");
   --hw-handle-image--queried: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24'%3E%3Cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M6 18 18 6M6 6l12 12'/%3E%3C/svg%3E");
   --hw-handle-offset-right: 0.375rem;
-  --hw-handle-width: 1.5em;
-  --hw-handle-width--queried: 1em;
+  --hw-handle-width: 1.5rem;
+  --hw-handle-width--queried: 1rem;
 
   --hw-combobox-width: 10rem;
 
   --hw-line-height: 1.5rem;
 
   --hw-listbox-height: calc(var(--hw-line-height) * 10);
-  --hw-listbox-offset-top: calc(var(--hw-line-height) * 1.625);
   --hw-listbox-z-index: 10;
 
+  --hw-padding--slimmer: 0.25rem;
   --hw-padding--slim: 0.375rem;
   --hw-padding--thick: 0.75rem;
 
@@ -57,19 +57,19 @@
 }
 
 .hw-combobox__main__wrapper {
+  border: var(--hw-border-width--slim) solid var(--hw-border-color);
+  border-radius: var(--hw-border-radius);
   position: relative;
-  width: min-content;
+  width: var(--hw-combobox-width);
 }
 
 .hw-combobox__input {
-  border: var(--hw-border-width--slim) solid var(--hw-border-color);
-  border-radius: var(--hw-border-radius);
+  border: 0;
   font-size: inherit;
   line-height: var(--hw-line-height);
   padding: var(--hw-padding--slim) var(--hw-handle-width) var(--hw-padding--slim) var(--hw-padding--thick);
-  position: relative;
-  width: var(--hw-combobox-width);
   text-overflow: ellipsis;
+  width: 100%;
 }
 
 .hw-combobox__input:focus-visible {
@@ -121,7 +121,7 @@
   overflow: auto;
   padding: 0;
   position: absolute;
-  top: var(--hw-listbox-offset-top);
+  top: calc(100% + 0.2rem);
   width: 100%;
   z-index: var(--hw-listbox-z-index);
 
@@ -144,6 +144,7 @@
 }
 
 .hw-combobox__option:hover,
+.hw-combobox__option--navigated,
 .hw-combobox__option--selected {
   background-color: var(--hw-active-bg-color);
 }
@@ -215,5 +216,48 @@
   [role="option"] {
     border-radius: var(--hw-border-radius);
     padding: var(--hw-padding--thick);
+  }
+}
+
+.hw-combobox--multiple {
+  .hw-combobox__inner__wrapper {
+    display: flex;
+    flex: 1 1;
+    flex-wrap: wrap;
+    align-items: center;
+    overflow: hidden;
+    padding: var(--hw-padding--slim);
+    padding-right: calc(var(--hw-handle-width) + var(--hw-padding--slimmer));
+  }
+
+  .hw-combobox__multiple_selection {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    border: var(--hw-border-width--slim) solid var(--hw-border-color);
+    border-radius: var(--hw-border-radius);
+    font-size: 0.85rem;
+    line-height: var(--hw-line-height);
+    margin-right: var(--hw-padding--slimmer);
+    padding: var(--hw-padding--slimmer);
+    padding-left: var(--hw-padding--slim);
+
+    .hw-combobox__multiple_selection__remove {
+      background-image: var(--hw-handle-image--queried);
+      background-size: var(--hw-handle-width--queried);
+      background-repeat: no-repeat;
+      cursor: pointer;
+      min-height: var(--hw-handle-width--queried);
+      min-width: var(--hw-handle-width--queried);
+      margin-left: var(--hw-padding--slimmer);
+    }
+  }
+
+  .hw-combobox__input {
+    flex: 2 1;
+  }
+
+  .hw-combobox__option--selected {
+    display: none;
   }
 }
