--- a/test/dummy/app/views/comboboxes/multiple_custom_events.html.erb
+++ b/test/dummy/app/views/comboboxes/multiple_custom_events.html.erb
@@ -5,16 +5,25 @@
   }
 </style>
 
-<div data-controller="combobox--events" style="display: flex; align-items: start; gap: 1rem;">
-  <%= combobox_tag :state,
-                   @state_options,
-                   id: "state-field",
-                   data: { action: "hw-combobox:selection->combobox--events#showSelection hw-combobox:closed->combobox--events#showClosed" },
-                   multiple: true,
-                   value: ['FL', 'MO'] do |combobox| %>
-    <% combobox.customize_main_wrapper class: "wide-multiple-field" %>
-  <% end %>
+<div data-controller="combobox--events" style="display: flex; flex-direction: column; align-items: start; gap: 1rem;">
+  <div style="display: flex; align-items: start; gap: 1rem;">
+    <span data-combobox--events-target="selectionScratchpad"></span>
+    <span data-combobox--events-target="closedScratchpad"></span>
+  </div>
 
-  <span data-combobox--events-target="selectionScratchpad"></span>
-  <span data-combobox--events-target="closedScratchpad"></span>
+  <div style="display: flex; align-items: start; gap: 1rem;">
+    <div data-combobox--events-target="selectionCount"></div>
+    <div data-combobox--events-target="closedCount"></div>
+  </div>
+
+  <div style="display: flex; align-items: start; gap: 1rem;">
+    <%= combobox_tag :state,
+                     @state_options,
+                     id: "state-field",
+                     data: { action: "hw-combobox:selection->combobox--events#showSelection hw-combobox:closed->combobox--events#showClosed" },
+                     multiple: true,
+                     value: ['FL', 'MO'] do |combobox| %>
+      <% combobox.customize_main_wrapper class: "wide-multiple-field" %>
+    <% end %>
+  </div>
 </div>
