--- a/test/dummy/app/views/comboboxes/multiple.html.erb
+++ b/test/dummy/app/views/comboboxes/multiple.html.erb
@@ -1,10 +1,1 @@
-<style>
-  .wide-multiple-field {
-    margin-right: 1rem;
-    width: 30rem;
-  }
-</style>
-
-<%= combobox_tag "state", @state_options, id: "state-field", multiple: true, value: [], placeholder: 'State' do |combobox| %>
-  <% combobox.customize_main_wrapper class: "wide-multiple-field" %>
-<% end %>
+<%= combobox_tag "state", @state_options, id: "state-field", multiple: true, value: [], placeholder: 'State' %>
