--- a/app/views/hotwire_combobox/_selection_chip.html.erb
+++ b/app/views/hotwire_combobox/_selection_chip.html.erb
@@ -1,7 +1,7 @@
-<%# locals: (display:, value:, for_id:) -%>
+<%# locals: (display:, value:, for_id:, data:) -%>
 
 <%= turbo_stream.before for_id do %>
-  <%= tag.div class: "hw-combobox__chip", data: { hw_combobox_chip: "" } do %>
+  <%= tag.div class: "hw-combobox__chip", data: data do %>
     <%= tag.span display %>
     <%= tag.span **combobox_chip_dismisser_attrs(value) %>
   <% end %>
