--- a/test/dummy/app/views/comboboxes/multiple.html.erb
+++ b/test/dummy/app/views/comboboxes/multiple.html.erb
@@ -1,4 +1,5 @@
 <%= combobox_tag "state", State.all,
       id: "state-field",
+      label: "States",
       multiselect_chip_src: new_state_chip_path,
-      placeholder: "select states" %>
+      placeholder: "Select states" %>
