--- a/test/dummy/app/views/state_chips/new.turbo_stream.erb
+++ b/test/dummy/app/views/state_chips/new.turbo_stream.erb
@@ -1,1 +1,3 @@
-<%= combobox_selection_chip display: @state.name %>
+<% @states.each do |state| %>
+  <%= combobox_selection_chip display: state.name, value: state.id %>
+<% end %>
