--- a/app/views/hotwire_combobox/_selection_chip.turbo_stream.erb
+++ b/app/views/hotwire_combobox/_selection_chip.turbo_stream.erb
@@ -1,7 +1,7 @@
 <%# locals: (display:, value:, for_id:, remover_attrs:) -%>
 
-<%= turbo_stream.before for_id do %>
-  <%= tag.div class: "hw-combobox__chip", data: { hw_combobox_chip: "" } do %>
+<%= within_combobox_selection_chip(for_id: for_id) do %>
+  <%= tag.div class: "hw-combobox__chip" do %>
     <%= tag.span display %>
     <%= tag.span **remover_attrs %>
   <% end %>
