--- a/test/dummy/app/views/states/_state.html.erb
+++ b/test/dummy/app/views/states/_state.html.erb
@@ -1,4 +1,4 @@
 <div style="display: flex; flex-direction: row; align-items: center;">
-  <span class="state state--<%= state.name.downcase %>"></span>
+  <span class="state state--<%= state.name.downcase.parameterize %>"></span>
   <p><%= state.name %></p>
 </div>
