Add basic multiselect test

--- a/test/dummy/app/views/comboboxes/multiselect.html.erb
+++ b/test/dummy/app/views/comboboxes/multiselect.html.erb
@@ -1,5 +1,5 @@
 <%= combobox_tag "state", State.all,
-      id: "state-field",
+      id: "states-field",
       label: "States",
       multiselect_chip_src: new_state_chip_path,
       placeholder: "Select states" %>
