--- a/test/dummy/app/views/state_chips/new_html.turbo_stream.erb
+++ b/test/dummy/app/views/state_chips/new_html.turbo_stream.erb
@@ -2,7 +2,7 @@
   <%= within_combobox_selection_chip do %>
     <%= tag.div class: "custom-chip" do %>
       <%= tag.span class: "state state--#{state.name.downcase.parameterize}" %>
-      <%= tag.span state.name %>
+      <%= tag.p state.name %>
       <%= tag.span **combobox_chip_remover_attrs(display: state.name, value: state.id, class: "custom-remover") %>
     <% end %>
   <% end %>
