--- a/test/dummy/app/views/states/index.turbo_stream.erb
+++ b/test/dummy/app/views/states/index.turbo_stream.erb
@@ -1,1 +1,3 @@
-<%= hw_async_combobox_options @states, render_in: { partial: "states/state", formats: [:html] } %>
+<%= hw_async_combobox_options @states,
+      render_in: { partial: "states/state", formats: [:html] },
+      next_page: @next_page %>
