--- a/test/dummy/app/views/comboboxes/required.html.erb
+++ b/test/dummy/app/views/comboboxes/required.html.erb
@@ -1,1 +1,5 @@
+<style>
+  .hw-combobox__input--invalid { border: 1px solid red; }
+</style>
+
 <%= combobox_tag "state", @state_options, id: "state-field", required: true %>
