--- a/test/dummy/app/views/comboboxes/multiselect_custom_events.html.erb
+++ b/test/dummy/app/views/comboboxes/multiselect_custom_events.html.erb
@@ -4,13 +4,13 @@
 
 <div data-controller="combobox--events" style="display: flex; flex-direction: column; align-items: start; gap: 1rem;">
   <div style="display: flex; align-items: start; gap: 1rem;">
-    <span data-combobox--events-target="selectionScratchpad"></span>
+    <span data-combobox--events-target="preselectionScratchpad"></span>
     <span data-combobox--events-target="closedScratchpad"></span>
     <span data-combobox--events-target="removalScratchpad"></span>
   </div>
 
   <div style="display: flex; align-items: start; gap: 1rem;">
-    <div data-combobox--events-target="selectionCount"></div>
+    <div data-combobox--events-target="preselectionCount"></div>
     <div data-combobox--events-target="closedCount"></div>
     <div data-combobox--events-target="removalCount"></div>
   </div>
@@ -21,7 +21,7 @@
           label: "States",
           multiselect_chip_src: new_state_chip_path,
           placeholder: "Select states",
-          data: { action: "hw-combobox:selection->combobox--events#showSelection hw-combobox:closed->combobox--events#showClosed hw-combobox:removal->combobox--events#showRemoval" } %>
+          data: { action: "hw-combobox:preselection->combobox--events#showPreselection hw-combobox:closed->combobox--events#showClosed hw-combobox:removal->combobox--events#showRemoval" } %>
   </div>
 </div>
 
