--- a/test/dummy/app/views/comboboxes/custom_events.html.erb
+++ b/test/dummy/app/views/comboboxes/custom_events.html.erb
@@ -5,16 +5,16 @@
 <div data-controller="combobox--events" style="display: flex; flex-direction: column; align-items: start; gap: 1rem;">
   <div style="display: flex; align-items: start; gap: 1rem;">
     <span data-combobox--events-target="preselectionScratchpad"></span>
-    <span data-combobox--events-target="closedScratchpad"></span>
+    <span data-combobox--events-target="selectionScratchpad"></span>
   </div>
 
   <div style="display: flex; align-items: start; gap: 1rem;">
     <div data-combobox--events-target="preselectionCount"></div>
-    <div data-combobox--events-target="closedCount"></div>
+    <div data-combobox--events-target="selectionCount"></div>
   </div>
 
   <div style="display: flex; align-items: start; gap: 1rem;">
-    <%= combobox_tag :movie, movies_path, id: "allow-new", placeholder: "allow-new", name_when_new: :new_movie, data: { action: "hw-combobox:preselection->combobox--events#showPreselection hw-combobox:closed->combobox--events#showClosed" } %>
-    <%= combobox_tag :movie, movies_path, id: "required", placeholder: "required", required: true, data: { action: "hw-combobox:preselection->combobox--events#showPreselection hw-combobox:closed->combobox--events#showClosed" } %>
+    <%= combobox_tag :movie, movies_path, id: "allow-new", placeholder: "allow-new", name_when_new: :new_movie, data: { action: "hw-combobox:preselection->combobox--events#showPreselection hw-combobox:selection->combobox--events#showSelection" } %>
+    <%= combobox_tag :movie, movies_path, id: "required", placeholder: "required", required: true, data: { action: "hw-combobox:preselection->combobox--events#showPreselection hw-combobox:selection->combobox--events#showSelection" } %>
   </div>
 </div>
