Accept `true` for `include_blank`
Co-authored-by: Justin Searls <searls@gmail.com>

--- a/test/dummy/app/views/comboboxes/include_blank.html.erb
+++ b/test/dummy/app/views/comboboxes/include_blank.html.erb
@@ -9,5 +9,6 @@
   <%= form.submit %>
 <% end %>
 
+<%= combobox_tag "literally-blank", State.all, id: "literally-blank-field", include_blank: true %>
 <%= combobox_tag "movie", movies_with_blank_path, id: "movie-field" %>
 <%= combobox_tag "movie", movies_with_blank_html_path, id: "html-movie-field" %>
