Reconnect after element morph

--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= combobox_style_tag %>
     <%= javascript_importmap_tags %>
 
+    <%= yield :head %>
+
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
