Implement async preselect for form object attributes

--- a/test/dummy/app/views/comboboxes/prefilled_async.erb
+++ b/test/dummy/app/views/comboboxes/prefilled_async.erb
@@ -42,3 +42,7 @@
 
   <%= form.submit %>
 <% end %>
+
+<%= form_with model: @movie do |form| %>
+  <%= form.combobox :rating, movie_ratings_path, label: "Rating" %>
+<% end %>
