--- a/app/views/hotwire_combobox/_next_page.turbo_stream.erb
+++ b/app/views/hotwire_combobox/_next_page.turbo_stream.erb
@@ -1,6 +1,6 @@
-<%# locals: (for_id:, next_page:, src:) -%>
+<%# locals: (for_id:, src:) -%>
 
 <%= turbo_stream.remove hw_pagination_frame_wrapper_id(for_id) %>
 <%= turbo_stream.append hw_listbox_id(for_id) do %>
-  <%= render "hotwire_combobox/pagination", for_id: for_id, src: hw_combobox_next_page_uri(src, next_page, for_id) %>
+  <%= render "hotwire_combobox/pagination", for_id: for_id, src: src %>
 <% end %>
